--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/Sophia_photo.jpeg" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Sophia Zhang</a></h1>
 					<p>Data Science | Business Intelligence | Machine Learning | AI | Analytics | Engineer</p>
 				</header>
@@ -46,7 +46,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner1.jpeg" alt="" />
+									<img src="images/banner.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
