updated about me

--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
 											</p>
 									</header>
 									<p>
-										🌿 I am a quantitative critical thinker with 2 years of statistical data science &amp; 10 years of engineering experience.
+										🌿 I am a quantitative critical thinker 10 years of experience covering energy, consulting, and pharmaceuticals.
 										<br>
 										🌿 I thrive at the intersection of data science, business analytics, and engineering. 
-										<br>
-										🌿 My subject matter expertise is in machine learning, data visualization, energy and process engineering, 
 										<br>
 										🌿 I see the world through a data lens and am passionate about solving its challenges in a sustainable way. 
 										
