updated about me

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 											</p>
 									</header>
 									<p>
-										🌿 I am a quantitative critical thinker 10 years of experience covering energy, consulting, and pharmaceuticals.
+										🌿 I am a quantitative critical thinker with 10 years of experience covering energy, consulting, and pharmaceuticals.
 										<br>
 										🌿 I thrive at the intersection of data science, business analytics, and engineering. 
 										<br>
