Updated welcome page

--- a/index.html
+++ b/index.html
@@ -51,16 +51,19 @@
 								<div class="container">
 									<header class="major">
 										<h2>Welcome!</h2>
-										<p>Data science and analytics expert delivering 
-											innovative and sustainable solutions to real world challenges.
+										<p>Hi, I'm Sophia, a data scientist passionate about delivering 
+											innovative solutions to real world challenges.
 											</p>
 									</header>
 									<p>
-										🌿 I am a quantitative critical thinker with 10 years of experience covering energy, consulting, and pharmaceuticals.
+										🌿 I am a quantitative critical thinker with 10+ years of experience covering energy, consulting, and pharmaceuticals.
 										<br>
 										🌿 I thrive at the intersection of data science, business analytics, and engineering. 
 										<br>
-										🌿 I see the world through a data lens and am passionate about solving its challenges in a sustainable way. 
+										🌿 I see data as a powerful resource we can harness to make the world a more sustainable place.
+										<br>
+										🌿 When I'm not at my desk I love to travel the world, eat and cook delicious food, and wander around a museum.
+
 										
 									</p>
 								</div>
@@ -139,8 +142,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Data Science Projects</h3>
-									<p>I am passionate about leveraging data to tell a story and deliver
-										innovative solutions to real world challenges.</p>
+									<p>I am passionate about leveraging data to tell a story and solve problems. Curious? Then take a look at some of my projects!</p>
 									<div class="features">
 										<!-- Project 1 -->
 										<article>
@@ -228,7 +230,7 @@
 										<br>
 										<br>
 										🌿 Energy Industry <br>
-										As an applied scientist and process engineer for 10 years, I built models for industrial processes using non linear data that saved $millions in infrastructure costs
+										As an applied scientist and process engineer for 10 years, I built models for industrial processes that saved $10+ million in infrastructure costs
 										<br>
 										<br>
 										<strong>Please feel free to take a copy of my Resume!</strong>
